# oracle

./: .env  .gitignore  Cargo.toml  LICENSE  Move.toml  README.md  rustfmt.toml  sui.log.2023-04-09
partners/alphafi/alpha/: Move.toml
partners/alphafi/alphafi/: Move.toml
partners/alphafi/alphafi_fungible/: Move.toml
partners/haedal/: Move.toml
partners/kriya/: Move.toml
partners/pyth/: Move.mainnet.toml  Move.testnet.toml  Move.toml
partners/supra/: Move.toml
partners/switchboard/: Move.toml
partners/volo/: Move.toml
rules/afsui-rule/: Move.toml
rules/aftermath-lp-rule/: Move.toml  README.md
rules/alphafi-stsui-sui-rule/: Move.toml  README.md
rules/cetus-lp-rule/: Move.toml  README.md
rules/gcoin-rule/: Move.toml
rules/hasui-rule/: Move.toml
rules/hawal-rule/: Move.toml
rules/navi-rule/: README.md
rules/navi_rule/: Move.toml
rules/pyth-rule/: Move.toml  README.md
rules/pyth_rule/: Move.toml
rules/scallop-rule/: Move.toml  README.md
rules/springsui-rule/: Move.toml
rules/stsbuck-rule/: Move.toml  README.md
rules/stsui-rule/: Move.toml
rules/tlp-rule/: Move.toml  README.md
rules/vsui-rule/: Move.toml
rules/wwal-rule/: Move.toml
scripts/: config.ts  constant.ts  env.example.json  package-lock.json  package.json  test-hawal.ts  test-stsbuck.ts  test-tlp.ts  test-wwal.ts  testHawal.ts
sources/: bucket_oracle.move  derivative.move  oracle.move  price_feed.move  single_oracle.move  switchboard_parser.move
sources/parser/: price_aggregator.move  pyth_parser.move  supra_parser.move  switchboard_parser.move
src/: main.rs
(+98 files in other folders)
